<resources>
    <string name="app_name">RouteGame App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="logout">LogOut</string>
    <string name="field_required">Field required.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_register">Not register?</string>
    <string name="signup_here">SignUp here?</string>
    <string name="already_register">Already register?</string>
    <string name="login_here">Login here</string>
</resources>