<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSignUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmailInput"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/etPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20sp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:padding="5dp"
            android:text="@string/sign_up" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/already_register" />

            <TextView
                android:id="@+id/tvLoginHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textColor="@color/orange"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>